updated code with jsp and method logic